--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/app.js",
+            "src": "app.js",
             "use": "@vercel/node"
         },
         {
@@ -13,7 +13,11 @@
     "routes":[
         {
             "src": "/(.*)",
-            "dest": "/api"
+            "dest": "/app.js"
+        },
+        {
+            "src": "/",
+            "dest": "/app.js"
         }
     ]
 }
